// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilesDownloadDropdown should render correctly 1`] = `[Function]`;

exports[`FilesDownloadDropdown when the menu item CSV is clicked should disable the menu item and display a loading spinner besides it 1`] = `
<DocumentFragment>
  <div
    class="relative inline-block z-30"
    data-testid="dropdown"
  >
    <button
      aria-controls="headlessui-menu-items-20"
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Download CSV/XLSX files"
      class="text-xl text-neutral-shade-75 disabled:text-neutral-shade-38 disabled:cursor-not-allowed w-7 h-7 flex justify-center items-center gap-1 rounded
        hover:bg-neutral-light-16 focus:bg-neutral-shade-7 active:bg-neutral-shade-7"
      id="headlessui-menu-button-18"
      title=""
      type="button"
    >
      <i
        aria-hidden="true"
        class="ci-more_horizontal"
      />
    </button>
    <div
      aria-labelledby="headlessui-menu-button-18"
      class="absolute right-0 mt-1 bg-white shadow-20 rounded-md w-max divide-y divide-solid divide-neutral-shade-18 outline-none z-10"
      id="headlessui-menu-items-20"
      role="menu"
      tabindex="0"
    >
      <ul
        class="py-2"
        role="none"
      >
        <li
          aria-disabled="true"
          class="flex items-center"
          id="headlessui-menu-item-21"
          role="menuitem"
        >
          <button
            class="flex flex-1 items-center justify-between gap-2 px-3 py-2 text-base disabled:text-neutral-shade-38 disabled:hover:bg-none disabled:cursor-default"
            disabled=""
          >
            <p
              class="text-left flex-shrink-0 flex-grow"
            >
              Export CSV
            </p>
            <i
              aria-hidden="true"
              class="animate-spin visible"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.75 17.25c-.615.615-1.626.622-2.125-.091a9 9 0 01-.446-.706c-.43-.756.008-1.666.828-1.958l.263-.095c.674-.24 1.404.123 1.786.727.382.605.397 1.42-.108 1.925l-.198.198zM10.144 4.81c-.217-.842.29-1.715 1.158-1.783A9 9 0 118.848 20.43c-.814-.305-1.061-1.285-.62-2.034.442-.75 1.408-.975 2.248-.748a5.85 5.85 0 101.621-11.497c-.87-.015-1.735-.498-1.953-1.34z"
                />
              </svg>
            </i>
          </button>
        </li>
        <li
          aria-disabled="true"
          class="flex items-center"
          id="headlessui-menu-item-22"
          role="menuitem"
        >
          <button
            class="flex flex-1 items-center justify-between gap-2 px-3 py-2 text-base disabled:text-neutral-shade-38 disabled:hover:bg-none disabled:cursor-default"
            disabled=""
          >
            <p
              class="text-left flex-shrink-0 flex-grow"
            >
              Export XLSX
            </p>
            <i
              aria-hidden="true"
              class="animate-spin invisible"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.75 17.25c-.615.615-1.626.622-2.125-.091a9 9 0 01-.446-.706c-.43-.756.008-1.666.828-1.958l.263-.095c.674-.24 1.404.123 1.786.727.382.605.397 1.42-.108 1.925l-.198.198zM10.144 4.81c-.217-.842.29-1.715 1.158-1.783A9 9 0 118.848 20.43c-.814-.305-1.061-1.285-.62-2.034.442-.75 1.408-.975 2.248-.748a5.85 5.85 0 101.621-11.497c-.87-.015-1.735-.498-1.953-1.34z"
                />
              </svg>
            </i>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FilesDownloadDropdown when the menu item XLSX is clicked should disable the menu item and display a loading spinner besides it 1`] = `
<DocumentFragment>
  <div
    class="relative inline-block z-30"
    data-testid="dropdown"
  >
    <button
      aria-controls="headlessui-menu-items-10"
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Download CSV/XLSX files"
      class="text-xl text-neutral-shade-75 disabled:text-neutral-shade-38 disabled:cursor-not-allowed w-7 h-7 flex justify-center items-center gap-1 rounded
        hover:bg-neutral-light-16 focus:bg-neutral-shade-7 active:bg-neutral-shade-7"
      id="headlessui-menu-button-8"
      title=""
      type="button"
    >
      <i
        aria-hidden="true"
        class="ci-more_horizontal"
      />
    </button>
    <div
      aria-labelledby="headlessui-menu-button-8"
      class="absolute right-0 mt-1 bg-white shadow-20 rounded-md w-max divide-y divide-solid divide-neutral-shade-18 outline-none z-10"
      id="headlessui-menu-items-10"
      role="menu"
      tabindex="0"
    >
      <ul
        class="py-2"
        role="none"
      >
        <li
          aria-disabled="true"
          class="flex items-center"
          id="headlessui-menu-item-11"
          role="menuitem"
        >
          <button
            class="flex flex-1 items-center justify-between gap-2 px-3 py-2 text-base disabled:text-neutral-shade-38 disabled:hover:bg-none disabled:cursor-default"
            disabled=""
          >
            <p
              class="text-left flex-shrink-0 flex-grow"
            >
              Export CSV
            </p>
            <i
              aria-hidden="true"
              class="animate-spin invisible"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.75 17.25c-.615.615-1.626.622-2.125-.091a9 9 0 01-.446-.706c-.43-.756.008-1.666.828-1.958l.263-.095c.674-.24 1.404.123 1.786.727.382.605.397 1.42-.108 1.925l-.198.198zM10.144 4.81c-.217-.842.29-1.715 1.158-1.783A9 9 0 118.848 20.43c-.814-.305-1.061-1.285-.62-2.034.442-.75 1.408-.975 2.248-.748a5.85 5.85 0 101.621-11.497c-.87-.015-1.735-.498-1.953-1.34z"
                />
              </svg>
            </i>
          </button>
        </li>
        <li
          aria-disabled="true"
          class="flex items-center"
          id="headlessui-menu-item-12"
          role="menuitem"
        >
          <button
            class="flex flex-1 items-center justify-between gap-2 px-3 py-2 text-base disabled:text-neutral-shade-38 disabled:hover:bg-none disabled:cursor-default"
            disabled=""
          >
            <p
              class="text-left flex-shrink-0 flex-grow"
            >
              Export XLSX
            </p>
            <i
              aria-hidden="true"
              class="animate-spin visible"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.75 17.25c-.615.615-1.626.622-2.125-.091a9 9 0 01-.446-.706c-.43-.756.008-1.666.828-1.958l.263-.095c.674-.24 1.404.123 1.786.727.382.605.397 1.42-.108 1.925l-.198.198zM10.144 4.81c-.217-.842.29-1.715 1.158-1.783A9 9 0 118.848 20.43c-.814-.305-1.061-1.285-.62-2.034.442-.75 1.408-.975 2.248-.748a5.85 5.85 0 101.621-11.497c-.87-.015-1.735-.498-1.953-1.34z"
                />
              </svg>
            </i>
          </button>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
